.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:52:26 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Key_debounce.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Admin\STM32CubeIDE\workspace_learn\Key_debounce\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Key_debounce.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Key_debounce.elf
 
arm-none-eabi-size  Key_debounce.elf 
arm-none-eabi-objdump -h -S Key_debounce.elf  > "Key_debounce.list"
   text	   data	    bss	    dec	    hex	filename
   4792	     12	   1572	   6376	   18e8	Key_debounce.elf
Finished building: default.size.stdout
 
Finished building: Key_debounce.list
 
15:52:44 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-size  Key_debounce.elf 
   text	   data	    bss	    dec	    hex	filename
   4792	     12	   1572	   6376	   18e8	Key_debounce.elf
Finished building: default.size.stdout
 
15:53:00 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-size  Key_debounce.elf 
   text	   data	    bss	    dec	    hex	filename
   4792	     12	   1572	   6376	   18e8	Key_debounce.elf
Finished building: default.size.stdout
 
15:57:16 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Key_debounce.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Admin\STM32CubeIDE\workspace_learn\Key_debounce\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Key_debounce.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Key_debounce.elf
 
arm-none-eabi-size  Key_debounce.elf 
arm-none-eabi-objdump -h -S Key_debounce.elf  > "Key_debounce.list"
   text	   data	    bss	    dec	    hex	filename
   4632	     12	   1572	   6216	   1848	Key_debounce.elf
Finished building: default.size.stdout
 
Finished building: Key_debounce.list
 
15:57:24 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-size  Key_debounce.elf 
   text	   data	    bss	    dec	    hex	filename
   4632	     12	   1572	   6216	   1848	Key_debounce.elf
Finished building: default.size.stdout
 
16:06:47 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:152:13: error: invalid storage class for function 'MX_GPIO_Init'
  152 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:200:1: error: expected declaration or statement at end of input
  200 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:50:13: warning: 'MX_GPIO_Init' used but never defined
   50 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:191:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  191 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:152:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  152 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:115:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  115 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
16:07:16 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Key_debounce.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Admin\STM32CubeIDE\workspace_learn\Key_debounce\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Key_debounce.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Key_debounce.elf
 
arm-none-eabi-size  Key_debounce.elf 
arm-none-eabi-objdump -h -S Key_debounce.elf  > "Key_debounce.list"
   text	   data	    bss	    dec	    hex	filename
   4752	     12	   1572	   6336	   18c0	Key_debounce.elf
Finished building: default.size.stdout
 
Finished building: Key_debounce.list
 
16:07:21 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-size  Key_debounce.elf 
   text	   data	    bss	    dec	    hex	filename
   4752	     12	   1572	   6336	   18c0	Key_debounce.elf
Finished building: default.size.stdout
 
16:08:05 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-size  Key_debounce.elf 
   text	   data	    bss	    dec	    hex	filename
   4752	     12	   1572	   6336	   18c0	Key_debounce.elf
Finished building: default.size.stdout
 
16:09:13 **** Incremental Build of configuration Debug for project Key_debounce ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Key_debounce.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\Users\Admin\STM32CubeIDE\workspace_learn\Key_debounce\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Key_debounce.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Key_debounce.elf
 
arm-none-eabi-size  Key_debounce.elf 
arm-none-eabi-objdump -h -S Key_debounce.elf  > "Key_debounce.list"
   text	   data	    bss	    dec	    hex	filename
   4752	     12	   1572	   6336	   18c0	Key_debounce.elf
Finished building: default.size.stdout
 
Finished building: Key_debounce.list
 
